<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AssetListScreenlet_default">asset_list_default</string>
    <string name="AssetDisplayScreenlet_default">asset_display_default</string>
    <string name="AudioDisplayScreenlet_default">audio_display_default</string>
    <string name="BlogsEntryDisplayScreenlet_default">blogsentry_display_default</string>
    <string name="LoginScreenlet_default">login_default</string>
    <string name="SignUpScreenlet_default">sign_up_default</string>
    <string name="ForgotPasswordScreenlet_default">forgotpassword_default</string>
    <string name="DDLFormScreenlet_default">ddl_form_default</string>
    <string name="DDLListScreenlet_default">ddl_list_default</string>
    <string name="DDMFormScreenlet_default">ddm_form_default</string>
    <string name="ImageDisplayScreenlet_default">image_display_default</string>
    <string name="PdfDisplayScreenlet_default">pdf_display_default</string>
    <string name="UserPortraitScreenlet_default">userportrait_default</string>
    <string name="VideoDisplayScreenlet_default">video_display_default</string>
    <string name="WebContentDisplayScreenlet_default">webcontentdisplay_default</string>
    <string name="WebContentListScreenlet_default">webcontentlist_default</string>
    <string name="CommentAddScreenlet_default">comment_add_default</string>
    <string name="ImageGalleryScreenlet_default">gallery_default</string>
    <string name="CommentDisplayScreenlet_default">comment_display_default</string>
    <string name="CommentListScreenlet_default">comment_list_default</string>
    <string name="RatingScreenlet_default">rating_thumb_default</string>
    <string name="WebScreenlet_default">web_default</string>
    <string name="asset_image">asset image</string>
    <string name="thumbs_up">thumbs up</string>
    <string name="very_sad_smiley">sad smiley</string>
    <string name="sad_smiley">sad smiley</string>
    <string name="neutral_smiley">neutral smiley</string>
    <string name="happy_smiley">happy smiley</string>
    <string name="very_happy_smiley">very happy smiley</string>
    <string name="pdf_content">pdf content</string>
    <string name="thumbs_down">thumbs down</string>
    <string name="gallery_image">gallery image</string>
    <string name="placeholder_while_image_loads">placeholder while image loads</string>
    <string name="audio_player_background">audio player background</string>
    <string name="cancel_button">cancel button</string>
    <string name="screenlet_rating_button_tag">screenlet_rating_button_tag</string>
    <string name="screenlet_rating_label_tag">screenlet_rating_label_tag</string>
    <string name="textViewValue">Enter a value</string>
    <string name="getUserButton">Get User</string>
    <string name="this_field_is_required">This field is required</string>

    <string-array name="image_mime_types">
        <item>image/png</item>
        <item>image/jpeg</item>
        <item>image/jpg</item>
        <item>image/gif</item>
        <item>image/x-ms-bmp</item>
    </string-array>

    <string-array name="video_mime_types">
        <item>video/mp4</item>
        <item>video/x-flv</item>
        <item>video/3gp</item>
        <item>video/quicktime</item>
        <item>video/x-msvideo</item>
        <item>video/x-ms-wmv</item>
    </string-array>

    <string-array name="audio_mime_types">
        <item>audio/mpeg</item>
        <item>audio/mpeg3</item>
        <item>audio/wav</item>
        <item>audio/x-wav</item>
    </string-array>

    <string-array name="pdf_mime_types">
        <item>application/pdf</item>
    </string-array>

    <string name="default_class_name_id_ddl_form_record">31330</string>
    <string name="default_class_name_id_layout">20047</string>
    <string name="default_class_name_id_mb_thread">20034</string>
    <string name="default_class_name_id_microblogs">28701</string>
    <string name="default_class_name_id_organization">20059</string>
    <string name="default_class_name_id_site">20045</string>
    <string name="default_class_name_id_user">20087</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">longitude:</string>


    <!--ThingScreenlet-->
    <string name="icon_for_person">Icon for person</string>
    <string name="icon_for_email">Icon for email</string>
    <string name="icon_for_birthday">Icon for birthday</string>
    <string name="icon_for_job_title">Icon for job title</string>
    <string name="arrow_to_indicate_clickable">Arrow to indicate clickable</string>
    <string name="person_portrait">The portrait of this person</string>
    <string name="no_internet_connection">No internet connection. Reconnect to submit.</string>
    <string name="information_successfully_received">Your information was successfully received.</string>
    <string name="submit_failed_contact_administrator">Submit failed. Contact the administrator.</string>
    <string name="cant_load_some_fields_offline">Can’t load some fields offline. Try to reconnect.</string>
    <string name="synchronizing_form">Synchronizing Form</string>
    <string name="validating_rules">Validating Rules</string>

    <!--WorkflowListScreenlet-->
    <string name="workflow_completed_text">Completed</string>
    <string name="workflow_pending_text">Pending</string>
    <string name="workflow_yesterday_text">Yesterday</string>
    <string name="workflow_created_on">Created on</string>
    <string name="workflow_type_text">%1$s · %2$s</string>
    <string name="workflow_due_date">Due date</string>
    <plurals name="workflow_due_date_after_text">
        <item quantity="one">Pending, Due %1$d day</item>
        <item quantity="other">Pending, Due %1$d days</item>
    </plurals>
    <plurals name="workflow_due_date_before_text">
        <item quantity="one">Pending, %1$d day ago</item>
        <item quantity="other">Pending, %1$d days ago</item>
    </plurals>
</resources>
