<?xml version="1.0" encoding="utf-8"?>
<com.liferay.mobile.screens.viewsets.defaultviews.rating.ReactionsRatingView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    style="@style/default_screenlet"
    >

    <ProgressBar
        android:id="@+id/liferay_rating_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="?colorPrimary"
        android:visibility="gone"
        />

    <RelativeLayout
        android:id="@+id/liferay_rating_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <ImageButton
            android:id="@+id/very_dissatisfied_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ripple"
            android:contentDescription="@string/very_sad_smiley"
            android:scaleType="fitXY"
            android:src="@drawable/default_mood_very_dissatisfied"
            android:tag="@string/screenlet_rating_button_tag"
            />

        <ImageButton
            android:id="@+id/dissatisfied_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_toRightOf="@+id/very_dissatisfied_button"
            android:background="@drawable/ripple"
            android:contentDescription="@string/sad_smiley"
            android:scaleType="fitXY"
            android:src="@drawable/default_mood_dissatisfied"
            android:tag="@string/screenlet_rating_button_tag"
            />

        <ImageButton
            android:id="@+id/neutral_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_toRightOf="@id/dissatisfied_button"
            android:background="@drawable/ripple"
            android:contentDescription="@string/neutral_smiley"
            android:scaleType="fitXY"
            android:src="@drawable/default_mood_neutral"
            android:tag="@string/screenlet_rating_button_tag"
            />

        <ImageButton
            android:id="@+id/satisfied_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_toRightOf="@id/neutral_button"
            android:background="@drawable/ripple"
            android:contentDescription="@string/happy_smiley"
            android:scaleType="fitXY"
            android:src="@drawable/default_mood_satisfied"
            android:tag="@string/screenlet_rating_button_tag"
            />

        <ImageButton
            android:id="@+id/very_satisfied_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_toRightOf="@id/satisfied_button"
            android:background="@drawable/ripple"
            android:contentDescription="@string/very_happy_smiley"
            android:scaleType="fitXY"
            android:src="@drawable/default_mood_very_satisfied"
            android:tag="@string/screenlet_rating_button_tag"
            />

        <TextView
            android:id="@+id/very_dissatisfied_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/very_dissatisfied_button"
            android:layout_alignRight="@id/very_dissatisfied_button"
            android:layout_below="@+id/very_dissatisfied_button"
            android:gravity="center"
            android:tag="@string/screenlet_rating_label_tag"
            android:textColor="@color/textColorPrimary_default"
            tools:text="600"
            />

        <TextView
            android:id="@+id/dissatisfied_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dissatisfied_button"
            android:layout_alignRight="@id/dissatisfied_button"
            android:layout_below="@+id/dissatisfied_button"
            android:gravity="center"
            android:tag="@string/screenlet_rating_label_tag"
            android:textColor="@color/textColorPrimary_default"
            tools:text="2000"
            />

        <TextView
            android:id="@+id/neutral_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/neutral_button"
            android:layout_alignRight="@id/neutral_button"
            android:layout_below="@+id/neutral_button"
            android:gravity="center"
            android:tag="@string/screenlet_rating_label_tag"
            android:textColor="@color/textColorPrimary_default"
            tools:text="10"
            />

        <TextView
            android:id="@+id/satisfied_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/satisfied_button"
            android:layout_alignRight="@id/satisfied_button"
            android:layout_below="@+id/satisfied_button"
            android:gravity="center"
            android:tag="@string/screenlet_rating_label_tag"
            android:textColor="@color/textColorPrimary_default"
            tools:text="0"
            />

        <TextView
            android:id="@+id/very_satisfied_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/very_satisfied_button"
            android:layout_alignRight="@id/very_satisfied_button"
            android:layout_below="@+id/very_satisfied_button"
            android:gravity="center"
            android:tag="@string/screenlet_rating_label_tag"
            android:textColor="@color/textColorPrimary_default"
            tools:text="112"
            />

    </RelativeLayout>

</com.liferay.mobile.screens.viewsets.defaultviews.rating.ReactionsRatingView>